yet another dumb solution :-)